code theoretically complete. big debug await